added about page plus updates

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
         <div class="nav-container">
-            <div id="place-holder-logo">Logo</div>  
+            <a href="{{ site.baseurl }}/"><div id="place-holder-logo">Logo</div></a>
             <ul>
-                <li><a href="#">About</a></li>
+                <li><a href="{{ site.baseurl }}/about">About</a></li>
                 <li><a href="#">中文</a></li>
             </ul>
         </div>
