relative sizing updates

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <div class="nav-container">
-            <a href="{{ site.baseurl }}/"><div id="place-holder-logo">Logo</div></a>
+            <a href="{{ site.baseurl }}/"><div class="logo">Chris Mlynarski</div></a>
             <ul>
                 <li><a href="{{ site.baseurl }}/about">About</a></li>
                 <li><a href="#">中文</a></li>
