--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ title: Project
 layout: default
 ---
 
-	<section class="project-content-container">
+	<section class="project_content-container">
 
 		<div class="breadcrumb-container">
 			<p><a href="{{ site.baseurl }}/">All Projects</a></p>
@@ -20,7 +20,7 @@ layout: default
 			</p>
 		</div>
 
-		<div class="image-container">
+		<div class="project_image-container">
 
 			{% for image in page.images %}
 			<img src="{{ site.baseurl }}/img/{{ image }}" alt="">
