--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,7 @@
+/* ---------------------------------------------------------------------
+ Variables
+ ------------------------------------------------------------------------ */
+
 /* === COLORS === */
 $primary: #4F5E66;
 $secondary: #7893A1;
@@ -7,9 +11,6 @@ $background-color: rgba(237, 241, 245, 1);
 
 /* === SIZING === */
 $max-width: 1140px;
-$gutter-width: .40;
-$card-height: 400px;
-$card-image-height: 265px;
 
 /* === MEDIA QUERIES === */
 $medium-break: 768px; 
