--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,15 +1,17 @@
-
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* ---------------------------------------------------------------------
+ Imports
+------------------------------------------------------------------------ */
 
 @import "compass/reset";
 @import "compass/css3";
+@import "susy";
 @import "variables";
 @import "base";
-@import "susy";
-@import "layouts";
-@import "modules";
+@import "nav";
+@import "footer";
+@import "background";
+@import "home";
+@import "project";
+@import "about";
 
 
