--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,6 +18,7 @@ layout: default
 			<p>
 				{{ content }}
 			</p>
+			<a href="{{ site.baseurl }}/{{ page.previous.url }}">Next Project</a>
 		</div>
 
 		<div class="project_image-container">
