--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -9,7 +9,7 @@
  	z-index: -1;
  }
 
- .index-background {
+ .home-background {
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
  }
 
