--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "nav";
 @import "footer";
 @import "background";
-@import "home";
+@import "index";
 @import "project";
 @import "about";
 
