fixed config issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link href="{{ site.baseurl }}/stylesheets/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
