--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,8 +3,8 @@
         <div class="nav-container">
             <a href="{{ site.baseurl }}/"><div class="logo">Chris Mlynarski</div></a>
             <ul>
-                <li><a href="{{ site.baseurl }}/about">About</a></li>
-                <li><a href="#">中文</a></li>
+                <li><a class="header-footer-item" href="{{ site.baseurl }}/about">About</a></li>
+                <!-- <li><a href="#">中文</a></li> -->
             </ul>
         </div>
     </nav>
