--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,14 +4,14 @@
 
 $susy: (
 	columns: 12,
-	gutters: .40,
+	gutters: 4,
 	gutter-position: split,
 	/*debug: (image: show)*/
 	);
 
 /* ---------------------------------------------------------------------
  Base Styles
- ------------------------------------------------------------------------ */
+ ----------------------------------------------------f-------------------- */
 
 * {
 	border: 1px solid red !important;
@@ -39,17 +39,10 @@ body {
 h1 {
 	font-family: $headline-font;
 	color: $primary;
-	font-size: 42px;	
-	text-transform: uppercase;
-	letter-spacing: 2px;
 }
 
 h2 {
-	color: $secondary;
-	font-size: 24px;
-	line-height: 38px;
-	letter-spacing: .75px;
-	font-weight: 300;
+	color: $tertiary;
 }
 
 h3 {
@@ -78,7 +71,7 @@ p {
 a {
 	text-decoration: none;
 	@include transition-property(color);
-	@include transition-duration(.2s);
+	@include transition-duration(.09s);
 	@include transition-timing-function(ease-in);
 
 	&:visted {
