--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,7 +4,7 @@
 
 $susy: (
 	columns: 12,
-	gutters: 4,
+	gutters: .4,
 	gutter-position: split,
 	/*debug: (image: show)*/
 	);
@@ -14,7 +14,7 @@ $susy: (
  ----------------------------------------------------f-------------------- */
 
 * {
-	border: 1px solid red !important;
+	/*border: 1px solid red !important;*/
 	@include box-sizing(border-box);
 }
 
@@ -70,7 +70,7 @@ p {
 
 a {
 	text-decoration: none;
-	@include transition-property(color);
+	@include transition-property(color, fill);
 	@include transition-duration(.09s);
 	@include transition-timing-function(ease-in);
 
